<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/color_pink"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/spotify"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />


        </LinearLayout>

        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/shuffleBtn"
                android:contentDescription="@string/shuffle_btn"
                android:drawableTop="@drawable/shuffle"
                android:text="@string/shuffle_btn"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAllCaps="false"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/favbtn"
                android:layout_weight="1"
                android:contentDescription="@string/fav_btn"
                android:drawableTop="@drawable/favorite__3_"
                android:text="@string/fav_btn"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAllCaps="false"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/playlistBtn"
                android:layout_weight="1"
                android:contentDescription="@string/playlist_btn"
                android:drawableTop="@drawable/playlist"
                android:text="@string/playlist_btn"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAllCaps="false"

                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/totalSongs"
            android:text="@string/Total_songs"
            android:textColor="@color/black"
            android:layout_margin="10dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvSongs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
/>
        
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:id="@+id/nav1"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>